<resources>
    <string name="app_name">Slope</string>
    <string name="PREF_FILE_NAME">ca.unb.mobiledev.SLOPE_SAVE</string>
    <string name="saved_volume_value_key">volume_val</string>
    <string name="HIGH_SCORE">high_score_val</string>
    <string name="play">Play</string>
    <string name="welcome_to_slope_game">Welcome To Slope Game</string>
    <string name="settings">SETTINGS</string>
    <string name="volume">Volume:</string>
    <string name="mute">MUTE</string>
    <string name="save">Save</string>
    <string name="close">Resume</string>
    <string name="menu_back">Back</string>
    <string name="pause">Pause</string>
    <string name="pause_menu">Pause Menu</string>
    <string name="settings_no_caps">Settings</string>
    <string name="help">Help</string>
    <string name="quit_to_main_menu">Quit to Main menu</string>
    <string name="help_description">
        Welcome to the slope game.\n\n
        Tilt the phone left and right to control your speed.\n\n
        Flick your phone up to jump.\n\n
        Try to go as far as you can without hitting an obstacle.\n\n
        Good Luck!
    </string>
    <string name="game_over">Game Over</string>
    <string name="your_score_was">Your Score Was:</string>
    <string name="try_again">Try Again</string>
    <string name="your_last_score">Your Last Score:</string>
    <string name="your_best_high_score">Your Best Score:</string>
    <string name="new_high_score">New High Score!</string>
    <string name="clear_save">Clear Save Data</string>
    <string name="credits">Credits</string>
    <string name="credits_text">
        Project by Peter and Isak\n
        For Dr. Powell\'s CS2063\n
        Noise Library by:\n
        Stefan Gustavson &amp; Peter Eastman \n
        Art by Evan J Kennedy
    </string>
</resources>